<resources>
    <string name="app_name">LEGO Pieces Organizer</string>

    <string name="id_header">ID</string>
    <string name="type_header">Type</string>
    <string name="colour_header">Colour</string>
    <string name="size_header">Size (WxL)</string>
    <!--<string name="length_header">Length</string>-->
    <string name="stock_header">Stock</string>
    <string name="used_header">Used</string>
    <string name="rem_header">Remaining</string>

    <string name="id_placeholder">0</string>
    <string name="type_placeholder">1</string>
    <string name="colour_placeholder">2</string>
    <string name="size_placeholder">34</string>
    <!--<string name="length_placeholder">4</string>-->
    <string name="stock_placeholder">5</string>
    <string name="used_placeholder">6</string>
    <string name="rem_placeholder">7</string>


    <string name="UP">+</string>
    <string name="DOWN">-</string>
</resources>
