<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="409dp"
                android:layout_height="729dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:gravity="center">

                    <TextView

                        android:layout_width="106dp"
                        android:layout_height="50dp"
                        android:gravity="center_horizontal|center_vertical"

                        android:textSize="30sp" />

                    <TextView

                        android:layout_width="119dp"
                        android:layout_height="50dp"
                        android:gravity="center_horizontal|center_vertical"

                        android:textSize="24sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/id_name"
                        android:layout_width="106dp"
                        android:layout_height="50dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/id_header"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/id_string"
                        android:layout_width="119dp"
                        android:layout_height="50dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/id_placeholder"
                        android:textSize="24sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/type_name"
                        android:layout_width="106dp"
                        android:layout_height="50dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/type_header"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/type_string"
                        android:layout_width="119dp"
                        android:layout_height="50dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/type_placeholder"
                        android:textSize="24sp" />


                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/colour_name"
                        android:layout_width="106dp"
                        android:layout_height="50dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/colour_header"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/colour_string"
                        android:layout_width="119dp"
                        android:layout_height="50dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/colour_placeholder"
                        android:textSize="24sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/size_name"
                        android:layout_width="106dp"
                        android:layout_height="50dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/size_header"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/size_string"
                        android:layout_width="119dp"
                        android:layout_height="50dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/size_placeholder"
                        android:textSize="24sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/stock_name"
                        android:layout_width="106dp"
                        android:layout_height="50dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/stock_header"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/stock_string"
                        android:layout_width="119dp"
                        android:layout_height="50dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/stock_placeholder"
                        android:textSize="24sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/used_name"
                        android:layout_width="106dp"
                        android:layout_height="50dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/used_header"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/down_button"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:text="@string/DOWN" />

                    <EditText
                        android:id="@+id/used_string"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/used_placeholder"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/up_button"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:text="@string/UP" />
                        <!--android:onClick="increase"/>-->

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="307dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/rem_name"
                        android:layout_width="160dp"
                        android:layout_height="50dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/rem_header"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/rem_string"
                        android:layout_width="119dp"
                        android:layout_height="50dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/rem_placeholder"
                        android:textSize="24sp" />

                </TableRow>
            </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>